Fix settings error alert is missing spaces in mobile
- widget-content-item__mx--settings only apply margins in tablet layout

--- a/authui/src/authflowv2/components/widget.css
+++ b/authui/src/authflowv2/components/widget.css
@@ -99,7 +99,12 @@
     @apply widget-content-item__px--settings;
   }
 
+  @media (min-width: theme("screens.tablet")) {
+    .widget-content__alert--settings {
+      @apply widget-content-item__mx--settings;
+    }
+  }
   .widget-content__alert--settings {
-    @apply widget-content-item__mx--settings;
+    @apply mx-6;
   }
 }
